--- a/exercicios/ex002/ex.004.html
+++ b/exercicios/ex002/ex.004.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript A4</title>
+    <Style>
+
+    </Style>
 </head>
 <body>
     
+    <script>
+        var nome = window.prompt('Qual é o seu nome?');
+        document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letras.`);
+        document.write(`Seu nome em maiúsculas é  ${nome.toUpperCase}`)
+
+    </script>
 </body>
 </html>
