--- a/exercicios/ex002/ex004.html
+++ b/exercicios/ex002/ex004.html
@@ -13,8 +13,8 @@
     
     <script>
         var nome = window.prompt('Qual é o seu nome?');
-        document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letras.`);
-        document.write(`Seu nome em maiúsculas é  ${nome.toUpperCase}`)
+        document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letras. <br>`);
+        document.write(`Seu nome em maiúsculas é  ${nome.toUpperCase()}`)
 
     </script>
 </body>
