--- a/exercicios/ex002/operadores.html
+++ b/exercicios/ex002/operadores.html
@@ -10,6 +10,7 @@
             background-color: lightblue;
             color: black;
             font: normal 20pt arial ;
+            text-align: center;
         }
     </style>
 </head>
@@ -22,10 +23,15 @@
         multi = n1*n2;
         div = n1/n2;
         sub = n1-n2;
+        resto = n1%n2;
+        pot = n1**n2;
         document.write(`A soma entre os números é: ${soma} <br>`);
         document.write(`A multiplicação entre os números é: ${multi} <br>`);
         document.write(`A divisão entre os números é: ${div} <br>` );
-        document.write(`A subtração entre os números é: ${sub}`);
+        document.write(`A subtração entre os números é: ${sub} <br>`);
+        document.write(`O resto da divisão é: ${resto} <br>`);
+        document.write(`A potenciação é: ${pot}`)
+
     </script>
     
 </body>
