--- a/exercicios/ex002/ex007.html
+++ b/exercicios/ex002/ex007.html
@@ -17,13 +17,18 @@
     <h1>Iniciando DOM</h1>
     <P>Aqui o resultado</P>
     <p>Apredendo a usar o <strong>DOM</strong> em JavaScript</p>
-    <div  name="msg" >Clique Aqui</div>
+    <div  class="msg" >Clique Aqui</div>
 <script>
     var corpo = window.document.body
     var p1 = window.document.getElementsByTagName('p')[1]
-    var d =  window.document.getElementsByName('msg')[0]
-    d.innerText = 'Teste'
-    d.style.color = 'black'
+  /*  var d =  window.document.getElementsByName('msg')[0]
+    corpo.style.background = 'blue'
+    d.innerText = 'Teste 01'
+    d.style.background = 'red'
+    d.style.color = 'black' */corpo
+
+    var d = window.document.querySelector('div.msg')
+    d.style.background = 'blue'
 </script>
 </body>
 </html>
