--- a/exercicios/ex002/ex007.html
+++ b/exercicios/ex002/ex007.html
@@ -25,10 +25,11 @@
     corpo.style.background = 'blue'
     d.innerText = 'Teste 01'
     d.style.background = 'red'
-    d.style.color = 'black' */corpo
+    d.style.color = 'black' */
 
     var d = window.document.querySelector('div.msg')
     d.style.background = 'blue'
+    d.innerText ='Teste '
 </script>
 </body>
 </html>
