--- a/exercicios/ex002/ex006.html
+++ b/exercicios/ex002/ex006.html
@@ -17,7 +17,7 @@
     <h1>Estudos de DOM </h1>
     <P>Aqui vai o resultado</P>
     <p>Apredendo a usar <strong>DOM </strong>em JavaScript</p>
-    <div id="msg" name ='msg1' >Clique em mim</div>
+    <div id="msg" name ='msg1' ><a href="ex002.html">Clique em mim</a></div>
     <script>
       //  window.document.write(window.document.URL) */
       var corpo  = window.document.body
@@ -31,7 +31,7 @@
 
       window.document.write('Está excrito assim: ' + p1.innerText +' <br> <br>' )
       p1.style.color= 'red'
-        corpo.style.background = 'blue'
+        corpo.style.background = 'black'
         //copia o texto
         document.write(p1.innerText + '<br>')
         document.aler(p1.innerText + '<br>')
@@ -40,6 +40,7 @@
 
         var d = window.document.getElementsByName('msg1')[0]
         d.innerText = 'Teste2'
+
 
     </script>
 </body>
