--- a/exercicios/ex002/ex006.html
+++ b/exercicios/ex002/ex006.html
@@ -21,7 +21,7 @@
     <script>
       //  window.document.write(window.document.URL) */
       var corpo  = window.document.body
-      var  p1 = window.document.getElementsByTagName('p')[1];
+      var  p1 = window.document.getElementsByTagName('h1')[0];
       var d = window.document.getElementById('msg')
       d.style.background = 'green'
       /* modificação de texto*/
