--- a/exercicios/aula11/ex011.html
+++ b/exercicios/aula11/ex011.html
@@ -7,13 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DETRAN</title>
     <style>
+        
+        BODY{
+            background-color: rgb(138, 102, 102);
+                  }
         div {
+            background-color: white;
             margin: auto;
             text-align: center;
             width: 350px;
             height: 300px;
             border: 2px solid black;
             border-radius: 3px;
+            transform: translate(0% ,50%);
         }
     </style>
 
