--- a/exercicios/aula11/ex011.html
+++ b/exercicios/aula11/ex011.html
@@ -17,10 +17,17 @@
             text-align: center;
             width: 350px;
             height: 300px;
-            border: 2px solid black;
+            border: 1px solid blue;
             border-radius: 3px;
-            transform: translate(0% ,50%);
         }
+        div >h1{
+            margin-top: 0px;
+            padding: 5px;
+            border-radius: 3px solid white;
+            background-color: black;
+            color: white;
+        }
+    
     </style>
 
 </head>
@@ -34,6 +41,7 @@
             <input type="button" value="Verificar" onclick="verificar()">
         </p>
         <p id="resul">
+            
         </p>
     </div>
     <script>
