--- a/exercicios/aula11/ex012.html
+++ b/exercicios/aula11/ex012.html
@@ -14,6 +14,9 @@
             width: 350px;
             height: 140px;
         }
+        div#resul{
+         font-size: larger;
+        }
     </style>
 
 </head>
@@ -21,10 +24,10 @@
     <div>
         <h1>Nacionalidade</h1>
         <label for="nacional">Nacionalidade: </label>
-        <input type="text" name="naciona" id="nacional" re>
-        <input type="submit" value="Verificar" onclick="verificar()">
+        <input type="text" name="naciona" id="nacional"> 
+        <input id="s" type="submit" value="Verificar" onclick="verificar()">
     </div>
-    <div id="resul"> ... </div>
+    <div id="resul"> </div>
     <script>
         function verificar(){
             var nacionalidade = window.document.getElementById('nacional')
