--- a/exercicios/aula12ex/modelo.html
+++ b/exercicios/aula12ex/modelo.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()" on>
     <header>
-        <h1>Título</h1>
+        <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div>
-            testando
+        <div id="msg">
+            mensagem
         </div>
-        <div>
-        
+        <div id="foto">
+        <img id="imagem" src="imagens/manha-p.png" alt="foto do dia">
         </div>
 
     </section>
