--- a/exercicios/aula13/modelo.html
+++ b/exercicios/aula13/modelo.html
@@ -15,7 +15,7 @@
         <div id="msg">
             <p>
                 <label for="txtano">Ano de Nascimento:</label>
-                <input type="number" name="txtano" id="txtano" min="0">
+                <input type="number" name="txtano" id="txtano" min="0" max="1930">
             </p>
             <p>
                 Sexo:
@@ -30,7 +30,6 @@
         </div>
         <div id="res">
         <p>Preencha os dados acima para ver o resultado</p>
-         <img src="" alt="" srcset="">
         </div>
     </section>
     <footer>
