--- a/exercicios/Aula14ex/modelo.html
+++ b/exercicios/Aula14ex/modelo.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>Contagem</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="carregar()" on>
+
+<body>
     <header>
-        <h1>Hora do Dia</h1>
-    </header>
+        <h1>Contagem</h1>
+    </header> 
     <section>
         <div id="msg">
-            mensagem
+            <p>
+                <label for="n01">Inicio:</label>
+                <input type="number" id="n01" id=" n01">
+            </p>
+            <p>
+                <label for="n02">Fim:</label>
+                <input type="number"     name="n02" id="n02">
+            </p>
+            <p>
+                <label for="pass">Passo:</label>
+                <input type="number" id="pass" name="pass">
+            </p>
+            <p>
+                <input type="button" value="Contar" onclick="contar()">
+            </p>
+
         </div>
-        <div id="foto">
-        
+        <div id="resul">
+            <p>Preparando a Contagem</p>
         </div>
     </section>
     <footer>
-      <p>&#169; tsan</p>
+        <p>&#169; tsan</p>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
